// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Tooltip> for cycling ramp, renders: duration, power-range, %FTP-range, cadence 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  text-align: center;
  font-size: 14px;
  padding: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  background-color: rgba(255,255,255,0.1);
  color: white;
  border: 0;
  border-bottom: 0px solid white;
  font-size: 14px;
  min-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faBolt"
    />
     
    100 W
     - 
    200 W
  </div>
  <div>
    50%
     - 
    100%
     FTP
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Cadence
    </label>
    <input
      className="c3"
      max="150"
      min="40"
      onCadenceChange={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      step="5"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`<Tooltip> for cycling, renders: duration, power, w/kg, %FTP, cadence 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  text-align: center;
  font-size: 14px;
  padding: 5px;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c2 {
  font-size: 14px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

.c3 {
  background-color: rgba(255,255,255,0.1);
  color: white;
  border: 0;
  border-bottom: 0px solid white;
  font-size: 14px;
  min-width: 1px;
  -webkit-flex: 1;
  -ms-flex: 1;
  flex: 1;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faBolt"
    />
     
    250 W
  </div>
  <div>
    3.3 W/kg
     · 
    125%
     FTP
  </div>
  <div
    className="c1"
  >
    <label
      className="c2"
    >
      Cadence
    </label>
    <input
      className="c3"
      max="150"
      min="40"
      onCadenceChange={[Function]}
      onChange={[Function]}
      onClick={[Function]}
      step="5"
      type="number"
      value=""
    />
  </div>
</div>
`;

exports[`<Tooltip> for running (in distance mode), renders: duration, distance, %pace, pace type 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  text-align: center;
  font-size: 14px;
  padding: 5px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faRuler"
    />
     
    1250 m
  </div>
  <div>
    125%
     
    10K pace
  </div>
</div>
`;

exports[`<Tooltip> for running ramp, renders: duration, distance, %pace-range, pace type 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  text-align: center;
  font-size: 14px;
  padding: 5px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faRuler"
    />
     
    750 m
  </div>
  <div>
    50%
     to 
    100%
     
    10K pace
  </div>
</div>
`;

exports[`<Tooltip> for running, renders: duration, distance, %pace, pace type 1`] = `
.c0 {
  position: absolute;
  z-index: 100;
  top: -95px;
  left: 0;
  color: white;
  background-color: rgba(0,0,0,0.7);
  width: 150px;
  border-radius: 5px;
  margin: 5px 0;
  text-align: center;
  font-size: 14px;
  padding: 5px;
}

<div
  className="c0"
>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faClock"
    />
     
    01:40
  </div>
  <div>
    <FontAwesomeIcon
      fixedWidth={true}
      icon="faRuler"
    />
     
    1250 m
  </div>
  <div>
    125%
     
    10K pace
  </div>
</div>
`;
